# geobench

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  Note.md  README.md  Readme.md  benchmark.py  clear.py  codeparser.py  command.py  example-scenario-python.yaml  example-scenario.yml  geobench  geobench.py  inventory.yml  process.py  pyproject.toml  qgis_sample.py  qgis_trial.py  recording.py  report.py  requirements.txt  scenario.py  setup.py  shortdesc.md  utils.py
ansible/: .gitignore  install.yml  inventory.yaml  run-scenario.yml
ansible/env/: extravars
ansible/script/: taskrunner.py
example/: prom-query.py
example/dask/: daskbenchmark.py  requirements.txt  scenario.sh
example/gmtsar/: gmtsar.yaml
example/python/: example-scenario-python.yaml
example/qgis-command/: example-scenario.yaml
example/qgis-process/: example-scenario.yaml
example/qgis-python/: example-scenario-python-win.yaml  example-scenario-python.yaml  example-scenario-qgis-python-win.yaml  program.py
example/simple/: scenario.yml
examples/: buffer_qgis_process.yaml  count_primes.bat  count_primes.py  count_primes_python.yaml  count_primes_python_energy.yaml  count_primes_python_http_api.yaml  count_primes_shell_windows.yaml  jupyter_benchmark_example.ipynb  python.yaml  qgis-process.yaml  qgis-python.yaml
exporter/: Readme.md  download.sh  query_exporter.py
geobench/: benchmark.py  command.py  error.py  main.py  process_monitor.py  process_monitor_threading.py  recording.py  scenario.py  trial.py
geobench/.ipynb_checkpoints/: command-checkpoint.py
geobench/templates/: index.html  result.html
kube-aws/ansible/: config-k3s.yml  config-monitoring.sh  config-monitoring.yml  deploy-dask-kube.yml  deploy-dask.yml  generate-token.sh  hosts  hosts.yml  inventory.yml  restart-k3s.yml  testrun.yml  vault.yml
kube-aws/ansible/dask-kube/: cluster.yaml
kube-aws/ansible/dataset/: vm_data.csv
kube-aws/ansible/prometheus/: prometheus.yml
kube-aws/aws/: Pulumi.yaml  __main__.py
kube-aws/dashboard/: prometheus-exporter-template.json  prometheus-exporter.json
kube-aws/docker/: Dockerfile
reporting/: report.py
rs-exporter/: Cargo.toml  Cross.toml  Dockerfile  build.sh  vm_data.csv
rs-exporter/src/: main.rs
src/geobench/: __init__.py  benchmark.py  cache.py  clear.py  cli.py  command.py  energy.py  error.py  jupyter.py  main.py  metrics.py  monitor.py  process_monitor.py  process_monitor_threading.py  report.py  scenario.py  system.py  system_recording.py
src/geobench/collector/: __init__.py  energy.py  powermetrics.py  psutil.py  rapl.py
src/geobench/executor/: __init__.py  factory.py  gdal.py  program.py  python.py  qgis_process.py  qgis_python.py  shell.py
src/geobench/templates/: __init__.py  index.html  program.j2  qgis_python.j2  report_template.html  result.html
