[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geobench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2",
    "pandas",
    "plotly",
    "prometheus-api-client",
    "psutil",
    "pyyaml",
    "requests",
]

[project.scripts]
geobench = "geobench.main:main"

[tool.hatch.build]
include = ["geobench/**/*"]
